# plonky2-ecdsa

./: Cargo.toml  README.md
src/: lib.rs
src/gadgets/: biguint.rs  curve.rs  curve_fixed_base.rs  curve_msm.rs  curve_windowed_mul.rs  ecdsa.rs  glv.rs  nonnative.rs  split_nonnative.rs
src/gates/: mod.rs  mul_nonnative.rs
