[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
parallel = ["plonky2_maybe_rayon/parallel", "plonky2/parallel"]

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
log = "0.4.27"
num = { version = "0.4.0", default-features = false }
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2" }
plonky2_maybe_rayon = { git = "https://github.com/0xPolygonZero/plonky2" }  
plonky2_u32 = { path = "../plonky2-u32" }
rand = "0.8.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
